Disable network-settings-config by default

This includes a minor change to fix a case that was missed when
the new UI is not enabled.

Bug: 817593
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I63cc277efed024f388e9f45fc196006602e8b757
Reviewed-on: https://chromium-review.googlesource.com/942341
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/branch-heads/3325@{#633}
Cr-Branched-From: bc084a8b5afa3744a74927344e304c02ae54189f-refs/heads/master@{#530369}